# AGA_ouroborobossesTeam

./: .env.example  .gitattributes  .gitignore  .gitmodules  AGA-README.md  AGA-independent-review-report.md  AGA-review-prompt.md  Makefile  README.md  THIRD_PARTY.md  compose.yaml
aga-skill/: CHANGELOG.md  Dockerfile.mcp  Makefile  README.md  SKILL.md  THIRD_PARTY_NOTICES.md  debian-snapshot.sources  pyproject.toml  requirements-ci.txt  requirements-container.txt  requirements-dev.txt
aga-skill/docs/: AGA-external-enforcement-checklist.md  CURRENT-STATE-AND-ROADMAP.md  DEMO-SCRIPT.md  PROJECT-RESULTS.md  RESULTS-EXAMPLES.md
aga-skill/evolver/: EVOLVER.md  fitness.py  mutations.md  mutations.py  permissions.yaml  policy.py
aga-skill/fixtures/: seaf.yaml
aga-skill/golden/: README.md  corpus.lock.json  corpus.yaml  coverage-matrix.md
aga-skill/knowledge/: aga-governance.md
aga-skill/logs/: reviews.sample.jsonl
aga-skill/precedents/: README.md
aga-skill/prompts/: ouroboros-orchestration-v1.0.4.txt  ouroboros-orchestration-v1.0.5.txt  ouroboros-orchestration-v1.1.0.txt  ouroboros-remediation-v1.0.0.txt
aga-skill/rules/: adr-checks.yaml  diagram-checks.yaml  principles.yaml
aga-skill/scripts/: apply_candidate.py  mcp_readiness.py  publish_candidate.py  record_action.py  run_evolution.py  run_mcp.py  run_remediation.py  run_review.py  run_seaf_review.py
aga-skill/templates/: adr-template.md  evolution-pr.md  review-comment.md
aga-skill/tests/: test_a2a.py  test_architecture_evolution.py  test_check_secrets.py  test_demo.py  test_evolution.py  test_mcp.py  (+34 more)
(+898 files in other folders)
