[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aga-skill"
version = "2.0.0"
description = "Offline-first Architecture Governance Agent MVP"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyYAML==6.0.3",
]

[project.optional-dependencies]
dev = [
  "pytest==9.0.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tools*", "evolver*"]
namespaces = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
